# soteria

./: .gitignore  Cargo.toml  LICENSE  README.md  action.yml
.github/workflows/: ci.yml  release.yml
src/: main.rs
