[package]
name = "safe-hash-action"
authors = ["Monad Foundation"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
owo-colors = "4.2"
primitive-types = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-keccak = { version = "2", features = ["keccak"] }
