[package]
name = "soteria"
authors = ["QEDK <qedk@monad.foundation>"]
license = "Apache-2.0"
version = "0.1.7"
edition = "2024"

[dependencies]
# anyhow should not be pinned
anyhow = "1"
clap = { version = "=4.5.53", features = ["derive"] }
hex = "=0.4.3"
owo-colors = "=4.2.3"
primitive-types = "=0.14.0"
# serde should not be pinned
serde = { version = "1", features = ["derive"] }
# serde_json should not be pinned
serde_json = "1"
tiny-keccak = { version = "=2.0.2", features = ["keccak"] }
